update targeting definitions
